Made quote picture a percentage of screen width to prevent it from overlapping the text

--- a/sites/default/files/newfa/css/app.css
+++ b/sites/default/files/newfa/css/app.css
@@ -920,7 +920,7 @@ https://developers.facebook.com/docs/reference/plugins/like-box/
 @media only screen and (min-width: 64.063em){
   #smk-quote .icon-smk-quote:before {
     top: 30px;
-    font-size: 300px;
+    font-size: 23vw;
   }
   #vvv .icon-vvv:before {
     font-size: 450px;
